force-app/main/default/objects/SQX_Complaint__c/SQX_Complaint__c.object-meta.xml
<CustomObject>
    <label>Compliant</label>
    <nameField>
        <displayFormat>COM-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>