force-app/main/default/objects/SQX_Complaint__c/fields/ConName__c.field-meta.xml
<CustomField>
    <fullName>ConName__c</fullName>
    <label>Primary Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>