force-app/main/default/objects/SQX_Complaint__c/fields/CQ_Title__c.field-meta.xml
<CustomField>
    <fullName>CQ_Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>